password-revealer: remove jquery dependency because of https + Content Security Policy error on fetch (Refused to load the script 'https://code.jquery.com/jquery-latest.js' because it violates the following Content Security Policy directive: script-src

--- a/password-revealer/password-revealer-test.html
+++ b/password-revealer/password-revealer-test.html
@@ -1,2 +1,7 @@
-Password input:
+Password input 1:
 <input type="password" value="super secret">
+
+<br><br>
+
+Password input 2:
+<input type="password" value="super secret 2">
